# timely-burndown-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: apply_estimates.py  log_timely_payloads.py  run_report.sh
timely_tracker/: __init__.py  api.py  cli.py  config.py  excel.py  models.py  tracker.py
